<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    android:layout_centerHorizontal="true"
    android:background="@drawable/custom_border"
    android:orientation="vertical">


    <TextView
        android:id="@+id/artname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/artpic"
        android:textColor="#AD850303"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/artartist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artname"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_toRightOf="@id/artpic"
        android:textColor="#050303"
        android:textSize="15dp" />


    <ImageView
        android:id="@+id/artpic"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="12dp"
        android:cropToPadding="true"
        android:scaleType="centerCrop" />

    <ImageView
        android:id="@+id/nextArrow"
        android:layout_width="50dp"
        android:layout_height="33dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="30dp"
        android:layout_toRightOf="@id/artpic"
        android:clickable="true"
        app:srcCompat="@drawable/arrow_34_512" />


</RelativeLayout>

